# njtech-compiler

./: CMakeLists.txt  LICENSE  README.txt  tokenizer.cpp  tokenizer.hpp
samples/: debug.txt  in.txt
src/: aot.cpp  aot.hpp  ast.cpp  ast.hpp  codegen.cpp  codegen.hpp  error.hpp  homework1.cpp  jit.cpp  jit.hpp  main.cpp  parser.cpp  parser.hpp  tac.cpp  tac.hpp  test.cpp  test_parser.cpp  test_tokenizer.cpp  tokenizer.cpp  tokenizer.hpp  util.hpp
